// Code generated by wand. DO NOT EDIT.

syntax = "proto3";

package mojo.lang;

import "mojo/core/email_address.proto";
import "mojo/core/url.proto";
import "mojo/core/value.proto";
import "mojo/core/version.proto";
import "mojo/core/version_range.proto";
import "mojo/lang/apply_expr.proto";
import "mojo/lang/block_stmt.proto";
import "mojo/lang/bool_literal_expr.proto";
import "mojo/lang/branch_stmt.proto";
import "mojo/lang/break_stmt.proto";
import "mojo/lang/cached_document.proto";
import "mojo/lang/continue_stmt.proto";
import "mojo/lang/control_transfer_stmt.proto";
import "mojo/lang/decl.proto";
import "mojo/lang/document.proto";
import "mojo/lang/expr.proto";
import "mojo/lang/float_literal_expr.proto";
import "mojo/lang/integer_literal_expr.proto";
import "mojo/lang/literal_expr.proto";
import "mojo/lang/loop_stmt.proto";
import "mojo/lang/null_literal_expr.proto";
import "mojo/lang/pattern.proto";
import "mojo/lang/position.proto";
import "mojo/lang/stmt.proto";
import "mojo/lang/string_literal_expr.proto";

option go_package = "github.com/mojo-lang/lang/go/pkg/mojo/lang;lang";
option java_multiple_files = true;
option java_outer_classname = "LangProto";
option java_package = "org.mojolang.mojo.lang";

message Argument {
    Position start_position = 1;
    Position end_position = 2;
    string label = 10;
    Expression value = 11;
}

message ArrayLiteralExpr {
    Position start_position = 1;
    Position end_position = 2;
    int32 kind = 3;
    bool implicit = 4;
    repeated Expression elements = 15;
}

message Attribute {
    Position start_position = 1;
    Position end_position = 2;
    string package = 5;
    string name = 10;
    AttributeDecl declaration = 11;
    repeated NominalType generic_arguments = 12;
    repeated Argument arguments = 13;
    Expression value = 20;
}

message AttributeDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    string full_name = 11;
    repeated Attribute attributes = 12;
    repeated GenericParameter generic_parameters = 13;
    GroupDecl group = 15;
    repeated Identifier resolved_identifiers = 16;
    repeated Identifier unresolved_identifiers = 17;
    oneof type {
        NominalType nominal_type = 20;
        StructType struct_type = 21;
    }
    Expression initial_value = 22;
}

message ConstantDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    repeated Attribute attributes = 12;
    GroupDecl group = 15;
    NominalType type = 20;
    Expression initial_value = 22;
}

message ConstructorDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    string full_name = 11;
    repeated Attribute attributes = 12;
    repeated GenericParameter generic_parameters = 13;
    FunctionDecl.Signature signature = 20;
    BlockStmt body = 21;
    Scope scope = 30;
}

message Declaration {
    oneof declaration {
        PackageDecl package_decl = 1;
        ImportDecl import_decl = 2;
        EnumDecl enum_decl = 3;
        StructDecl struct_decl = 4;
        TypeAliasDecl type_alias_decl = 5;
        InterfaceDecl interface_decl = 6;
        ConstantDecl constant_decl = 10;
        VariableDecl variable_decl = 11;
        AttributeDecl attribute_decl = 12;
        FunctionDecl function_decl = 13;
        ConstructorDecl constructor_decl = 14;
        GenericParameter generic_parameter = 19;
        GroupDecl group_decl = 20;
    }
}

message DictionaryLiteralExpr {
    
    message Entry {
        Expression key = 1;
        Expression value = 2;
    }
    Position start_position = 1;
    Position end_position = 2;
    int32 kind = 3;
    bool implicit = 4;
    repeated Entry entries = 15;
}

message EnumDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    repeated Attribute attributes = 12;
    repeated GenericParameter generic_parameters = 13;
    NominalType enclosing_type = 14;
    GroupDecl group = 15;
    repeated Identifier resolved_identifiers = 16;
    repeated Identifier unresolved_identifiers = 17;
    EnumType type = 20;
    Scope scope = 30;
}

message EnumType {
    Position start_position = 1;
    Position end_position = 2;
    repeated ValueDecl enumerators = 10;
    NominalType underlying_type = 11;
}

message Expression {
    oneof expression {
        NullLiteralExpr null_literal_expr = 1;
        IntegerLiteralExpr integer_literal_expr = 2;
        FloatLiteralExpr float_literal_expr = 3;
        BoolLiteralExpr bool_literal_expr = 4;
        StringLiteralExpr string_literal_expr = 5;
        ObjectLiteralExpr object_literal_expr = 6;
        ArrayLiteralExpr array_literal_expr = 7;
        DictionaryLiteralExpr dictionary_literal_expr = 8;
        IdentifierExpr identifier_expr = 9;
    }
}

message DiscardAssignmentExpr {
    Position start_position = 1;
    Position end_position = 2;
    int32 kind = 3;
    bool implicit = 4;
}

message MemberExpr {
}

message DynamicLookupExpr {
    Position start_position = 1;
    Position end_position = 2;
    int32 kind = 3;
    bool implicit = 4;
}

message UnresolvedMemberExpr {
}

message IdentityExpr {
    Position start_position = 1;
    Position end_position = 2;
    int32 kind = 3;
    bool implicit = 4;
}

message KeyPathApplicationExpr {
    Position start_position = 1;
    Position end_position = 2;
    int32 kind = 3;
    bool implicit = 4;
}

message TupleElementExpr {
    Position start_position = 1;
    Position end_position = 2;
    int32 kind = 3;
    bool implicit = 4;
}

message KeyPathExpr {
}

message CallExpr {
    Position start_position = 1;
    Position end_position = 2;
    int32 kind = 3;
    bool implicit = 4;
}

message ErrorExpr {
    Position start_position = 1;
    Position end_position = 2;
    int32 kind = 3;
    bool implicit = 4;
}

message ForStmt {
    Position start_position = 1;
    Position end_position = 2;
    int64 kind = 3;
    bool implicit = 4;
    BlockStmt body = 21;
    Expression iterator = 10;
    Expression sequence = 20;
}

message FunctionDecl {
    
    message Signature {
        repeated ValueDecl parameters = 1;
        NominalType result = 2;
    }
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    string full_name = 11;
    repeated Attribute attributes = 12;
    repeated GenericParameter generic_parameters = 13;
    Signature signature = 20;
    BlockStmt body = 21;
    Scope scope = 30;
}

message GenericParameter {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    repeated Attribute attributes = 12;
    repeated GenericParameter generic_parameters = 13;
    NominalType enclosing_type = 14;
    GroupDecl group = 15;
    repeated Identifier resolved_identifiers = 16;
    repeated Identifier unresolved_identifiers = 17;
    NominalType constraint = 20;
}

message GroupDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    repeated Attribute attributes = 12;
    Identifier.Kind type = 20;
    repeated Declaration declarations = 21;
}

message Identifier {
    
    enum Kind {
        KIND_UNSPECIFIED=0;
        KIND_ENUM=1;
        KIND_STRUCT=2;
        KIND_TYPE_ALIAS=3;
        KIND_INTERFACE=4;
        KIND_CONSTANT=5;
        KIND_VARIABLE=6;
        KIND_ATTRIBUTE=7;
        KIND_FUNCTION=8;
        KIND_GENERIC_PARAMETER=9;
        KIND_TYPE=10;
        KIND_VALUE=11;
    }
    Position start_position = 1;
    Position end_position = 2;
    Kind kind = 3;
    string package = 5;
    string source_file = 6;
    string name = 10;
    Declaration declaration = 11;
    string alias = 12;
    string full_name = 20;
    repeated string enclosing_type_names = 21;
}

message IdentifierExpr {
    Position start_position = 1;
    Position end_position = 2;
    int32 kind = 3;
    bool implicit = 4;
    Identifier identifier = 10;
    repeated NominalType generic_arguments = 11;
}

message IfStmt {
    Position start_position = 1;
    Position end_position = 2;
    int64 kind = 3;
    bool implicit = 4;
    Expression condition = 20;
    BlockStmt then_branch = 21;
    oneof else_branch {
        BlockStmt block_stmt = 22;
        IfStmt if_stmt = 23;
    }
}

message ImportDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string import_package_name = 10;
    string import_package_alias = 11;
    repeated Identifier identifiers = 13;
}

message InterfaceDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    repeated Attribute attributes = 12;
    repeated GenericParameter generic_parameters = 13;
    NominalType enclosing_type = 14;
    GroupDecl group = 15;
    repeated Identifier resolved_identifiers = 16;
    repeated Identifier unresolved_identifiers = 17;
    InterfaceType type = 20;
    repeated TypeAliasDecl type_alias_decls = 21;
    Scope scope = 30;
}

message InterfaceType {
    Position start_position = 1;
    Position end_position = 2;
    repeated FunctionDecl methods = 10;
    repeated NominalType inherits = 11;
}

message MatchCase {
    Position start_position = 1;
    Position end_position = 2;
    int64 kind = 3;
    bool implicit = 4;
    Pattern pattern = 20;
    oneof body {
        BlockStmt block_stmt = 21;
        Expression expression = 22;
    }
}

message MatchStmt {
    Position start_position = 1;
    Position end_position = 2;
    int64 kind = 3;
    bool implicit = 4;
    Expression subject = 20;
    MatchCase cases = 22;
}

message NominalType {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package = 5;
    string name = 10;
    TypeDeclaration type_declaration = 11;
    repeated NominalType generic_arguments = 12;
    repeated Attribute attributes = 13;
    NominalType enclosing_type = 14;
}

message ObjectLiteralExpr {
    
    message Field {
        Expression name = 1;
        Expression value = 2;
    }
    Position start_position = 1;
    Position end_position = 2;
    int32 kind = 3;
    bool implicit = 4;
    repeated Field fields = 15;
}

message Package {
    
    message Requirement {
        
        message Version {
            
            enum Type {
                TYPE_CARET=0;
                TYPE_TILDE=1;
                TYPE_WILDCARD=2;
                TYPE_COMPARISON=3;
            }
            Type type = 1;
            mojo.core.VersionRange range = 2;
        }
        Version version = 1;
        string registry = 3;
        string path = 4;
        mojo.core.Url repository = 5;
        string branch = 6;
    }
    
    message Author {
        string author = 1;
        string organization = 2;
        mojo.core.EmailAddress email = 3;
    }
    string name = 1;
    string full_name = 2;
    mojo.core.Version version = 3;
    ReferencedPackage parent = 4;
    repeated Package children = 5;
    repeated Author authors = 6;
    string summary = 7;
    string description = 10;
    CachedDocument document = 11;
    mojo.core.Url repository = 12;
    string license = 13;
    repeated string exports = 15;
    repeated SourceFile source_files = 16;
    Scope scope = 20;
    mojo.core.Object extra_info = 25;
    map<string, Package.Requirement> dependencies = 30;
    map<string, Package> resolved_dependencies = 31;
}

message PackageDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    ObjectLiteralExpr package_literal_expr = 11;
    Package package = 20;
}

message RepeatStmt {
    Position start_position = 1;
    Position end_position = 2;
    int64 kind = 3;
    bool implicit = 4;
    BlockStmt body = 21;
    Expression condition = 20;
}

message ReturnStmt {
    Position start_position = 1;
    Position end_position = 2;
    int64 kind = 3;
    bool implicit = 4;
    Expression result = 10;
}

message Scope {
    map<string, Identifier> identifiers = 1;
    Scope enclosing = 10;
}

message SourceFile {
    string name = 1;
    string full_name = 2;
    mojo.core.Url url = 3;
    repeated Attribute attributes = 4;
    string package_name = 10;
    repeated ImportDecl imports = 11;
    repeated Statement statements = 12;
    repeated Identifier resolved_identifiers = 16;
    repeated Identifier unresolved_identifiers = 17;
    repeated SourceFile dependencies = 21;
    Scope scope = 30;
}

message Statement {
    oneof statement {
        ReturnStmt return_stmt = 1;
        BreakStmt break_stmt = 2;
        ContinueStmt continue_stmt = 3;
        MatchStmt match_stmt = 4;
        IfStmt if_stmt = 5;
        ForStmt for_stmt = 6;
        WhileStmt while_stmt = 7;
        RepeatStmt repeat_stmt = 8;
        BlockStmt block_stmt = 9;
        Declaration declaration = 10;
        Expression expression = 11;
    }
}

message StructDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    repeated Attribute attributes = 12;
    repeated GenericParameter generic_parameters = 13;
    NominalType enclosing_type = 14;
    GroupDecl group = 15;
    repeated Identifier resolved_identifiers = 16;
    repeated Identifier unresolved_identifiers = 17;
    StructType type = 20;
    repeated TypeAliasDecl type_alias_decls = 21;
    repeated EnumDecl enum_decls = 22;
    repeated StructDecl struct_decls = 23;
    Scope scope = 30;
}

message StructType {
    Position start_position = 1;
    Position end_position = 2;
    repeated ValueDecl fields = 10;
    repeated NominalType inherits = 11;
    repeated ValueGroupDecl groups = 12;
}

message TypeAliasDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    repeated Attribute attributes = 12;
    repeated GenericParameter generic_parameters = 13;
    NominalType enclosing_type = 14;
    GroupDecl group = 15;
    repeated Identifier resolved_identifiers = 16;
    repeated Identifier unresolved_identifiers = 17;
    NominalType type = 20;
    Scope scope = 30;
}

message TypeDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    repeated Attribute attributes = 12;
    repeated GenericParameter generic_parameters = 13;
    NominalType enclosing_type = 14;
    GroupDecl group = 15;
    repeated Identifier resolved_identifiers = 16;
    repeated Identifier unresolved_identifiers = 17;
}

message TypeDeclaration {
    oneof type_declaration {
        EnumDecl enum_decl = 3;
        StructDecl struct_decl = 4;
        TypeAliasDecl type_alias_decl = 5;
        InterfaceDecl interface_decl = 6;
        GenericParameter generic_parameter = 19;
    }
}

message ValueDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    repeated Attribute attributes = 12;
    GroupDecl group = 15;
    NominalType type = 20;
    Expression initial_value = 22;
}

message ValueGroupDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    repeated Attribute attributes = 12;
    repeated ValueDecl declarations = 15;
}

message VariableDecl {
    Position start_position = 1;
    Position end_position = 2;
    Document document = 4;
    string package_name = 5;
    string source_file_name = 6;
    bool implicit = 7;
    string name = 10;
    repeated Attribute attributes = 12;
    GroupDecl group = 15;
    NominalType type = 20;
    Expression initial_value = 22;
}

message WhileStmt {
    Position start_position = 1;
    Position end_position = 2;
    int64 kind = 3;
    bool implicit = 4;
    BlockStmt body = 21;
    Expression condition = 20;
}

message ReferencedPackage {
    oneof referenced_package {
        string key = 1;
        Package package = 2;
    }
}
